--- a/form5.html
+++ b/form5.html
@@ -40,7 +40,7 @@
 
   <script>
     const scriptURL = 'https://script.google.com/macros/s/AKfycbzVtL_PlahsLLrCL31Jpxwu6QG41Ck0tu2dWIXIPTv-o_JYqxOv0NVkFbBD5Cgat7Yc/exec'; // ✅ Dán URL Web App nếu muốn lưu vào Google Sheet
-    const part2URL = 'file:///C:/Users/NMS/Documents/Nh%E1%BA%ADp%20li%E1%BB%87u%20UBND/D%E1%BB%AF%20li%E1%BB%87u%20test/form4.html'; // ✅ Thay bằng link thực tế tới part2.html
+    const part2URL = 'https://sundaybaby339.github.io/form-demo/form4.html'; // ✅ Thay bằng link thực tế tới part2.html
 
     const form = document.getElementById('infoForm');
 
