--- a/form4.html
+++ b/form4.html
@@ -27,10 +27,18 @@
       display: block;
     }
     #timer {
+      position: fixed;
+      top: 10px;
+      right: 20px;
+      background-color: white;
+      padding: 8px 12px;
+      border: 2px solid red;
+      border-radius: 6px;
       font-size: 18px;
       color: red;
-      text-align: right;
       font-weight: bold;
+      z-index: 9999;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
     h3 {
       margin-top: 30px;
