--- a/form4.html
+++ b/form4.html
@@ -64,15 +64,15 @@
     <!-- Bộ 1 -->
     <div class="section active" id="section1">
       <h3>Bộ hồ sơ 1: Bộ hồ sơ khai sinh</h3>
-      <label>1. Họ và tên của trẻ:</label><input type="text" name="1_hoten_tre">
-      <label>2. Ngày, tháng, năm sinh của trẻ:</label><input type="text" name="2_ngaysinh_tre">
+      <label>1. Họ và tên trẻ:</label><input type="text" name="1_hoten_tre">
+      <label>2. Ngày, tháng, năm sinh của trẻ (dd/mm/yyyy):</label><input type="text" name="2_ngaysinh_tre">
       <label>3. Giới tính của trẻ:</label><input type="text" name="3_gioitinh_tre">
       <label>4. Dân tộc của trẻ:</label><input type="text" name="4_dantoc_tre">
-      <label>5. Nơi sinh:</label><input type="text" name="5_noisinh">
+      <label>5. Nơi sinh (ghi đầy đủ thông tin):</label><input type="text" name="5_noisinh">
       <label>6. Quê quán của trẻ:</label><input type="text" name="6_quequan">
-      <label>7. Họ và tên của cha:</label><input type="text" name="7_hotencha">
+      <label>7. Họ và tên cha:</label><input type="text" name="7_hotencha">
       <label>8. Năm sinh của cha:</label><input type="text" name="8_namsinhcha">
-      <label>9. Họ và tên của mẹ:</label><input type="text" name="9_hotenme">
+      <label>9. Họ và tên mẹ:</label><input type="text" name="9_hotenme">
       <label>10. Năm sinh của mẹ:</label><input type="text" name="10_namsinhme">
       <label>11. Họ và tên người đi khai sinh:</label><input type="text" name="11_hotennguoikhaisinh">
       <label>12. Quan hệ với người được khai sinh:</label><input type="text" name="12_quanhe">
@@ -83,41 +83,41 @@
     <div class="section" id="section2">
       <h3>Bộ hồ sơ 2: Đăng ký thường trú (sổ hộ khẩu)</h3>
       <label>1. Họ và tên người kê khai:</label><input type="text" name="13_hoten_kekhai">
-      <label>2. Số định danh cá nhân:</label><input type="text" name="14_dinhdanh">
-      <label>3. Ngày tháng năm sinh:</label><input type="text" name="15_ngaysinh">
-      <label>4. Giới tính:</label><input type="text" name="16_gioitinh">
-      <label>5. Số điện thoại:</label><input type="text" name="17_sdt">
-      <label>6. Email (nếu có):</label><input type="text" name="18_email">
+      <label>2. Số định danh cá nhân của người kê khai:</label><input type="text" name="14_dinhdanh">
+      <label>3. Ngày tháng năm sinh người kê khai (dd/mm/yyyy):</label><input type="text" name="15_ngaysinh">
+      <label>4. Giới tính người kê khai:</label><input type="text" name="16_gioitinh">
+      <label>5. SĐT liên hệ người kê khai:</label><input type="text" name="17_sdt">
+      <label>6. Email (nếu có) người kê khai:</label><input type="text" name="18_email">
       <label>7. Họ và tên chủ hộ:</label><input type="text" name="19_chuho">
       <label>8. Quan hệ với chủ hộ:</label><input type="text" name="20_quanhe_chuho">
       <label>9. Số định danh cá nhân của chủ hộ:</label><input type="text" name="21_dinhdanh_chuho">
-      <label>10. Nội dung đề nghị:</label><input type="text" name="22_noidung">
-      <label>11. Ngày lập tờ khai:</label><input type="text" name="23_ngaylap">
-      <label>12. Ký và ghi rõ họ, chữ đệm, tên:</label><input type="text" name="24_kyten">
-      <label>13. Ý kiến của cơ quan đăng ký cư trú:</label><input type="text" name="25_ykien">
-      <label>14. Trường hợp tách hộ:</label><input type="text" name="26_tachho">
+      <label>10. Nội dung đề nghị (ghi đầy đủ thông tin):</label><input type="text" name="22_noidung">
+      <label>11. Ngày lập tờ khai (dd/mm/yyyy):</label><input type="text" name="23_ngaylap">
+      <label>12. Họ tên người kê khai cuối biểu mẫu:</label><input type="text" name="24_kyten">
+      <label>13. Có khai thành viên đi kèm không (Ghi Có hoặc Không):</label><input type="text" name="25_khaikem">
+      <label>14. Cơ quan tiếp nhận:</label><input type="text" name="26_coquan">
       <button type="button" onclick="nextSection()">Tiếp theo</button>
     </div>
 
     <!-- Bộ 3 -->
     <div class="section" id="section3">
       <h3>Bộ hồ sơ 3: Hồ sơ chứng thực hợp đồng chuyển nhượng quyền sử dụng đất</h3>
-      <label>1. Họ và tên bên chuyển nhượng:</label><input type="text" name="27_benchuyen">
-      <label>2. Số CCCD/CMND/Hộ chiếu:</label><input type="text" name="28_cccd_chuyen">
-      <label>3. Địa chỉ:</label><input type="text" name="29_diachi_chuyen">
-      <label>4. Họ và tên bên nhận chuyển nhượng:</label><input type="text" name="30_bennhan">
-      <label>5. Số CCCD/CMND/Hộ chiếu:</label><input type="text" name="31_cccd_nhan">
-      <label>6. Địa chỉ:</label><input type="text" name="32_diachi_nhan">
-      <label>7. Thửa đất số:</label><input type="text" name="33_thuadat">
-      <label>8. Tờ bản đồ số:</label><input type="text" name="34_bando">
-      <label>9. Địa chỉ thửa đất:</label><input type="text" name="35_diachidat">
-      <label>10. Diện tích:</label><input type="text" name="36_dientich">
+      <label>1. Tên hợp đồng (ghi đầy đủ thông tin):</label><input type="text" name="27_tenhopdong">
+      <label>2. Họ và tên bên chuyển nhượng (Bên A):</label><input type="text" name="28_ben_a">
+      <label>3. Số CMND/CCCD bên A:</label><input type="text" name="29_cccd_a">
+      <label>4. Địa chỉ thường trú bên A:</label><input type="text" name="30_diachi_a">
+      <label>5. Họ và tên bên nhận chuyển nhượng (Bên B):</label><input type="text" name="31_ben_b">
+      <label>6. Số CMND/CCCD bên B:</label><input type="text" name="32_cccd_b">
+      <label>7. Địa chỉ thường trú bên B:</label><input type="text" name="33_diachi_b">
+      <label>8. Địa chỉ thửa đất (số thửa, tờ bản đồ, xã/huyện/Tỉnh):</label><input type="text" name="34_diachidat">
+      <label>9. Diện tích chuyển nhượng (m²) (Chỉ cần nhập số):</label><input type="text" name="35_dientich">
+      <label>10. Tổng giá trị chuyển nhượng (VND) (Chỉ cần nhập số):</label><input type="text" name="36_giatri">
       <label>11. Hình thức sử dụng:</label><input type="text" name="37_hinhthuc">
       <label>12. Mục đích sử dụng:</label><input type="text" name="38_mucdich">
       <label>13. Thời hạn sử dụng:</label><input type="text" name="39_thoihan">
-      <label>14. Nguồn gốc sử dụng:</label><input type="text" name="40_nguongoc">
-      <label>15. Giá chuyển nhượng:</label><input type="text" name="41_gia">
-      <label>16. Cam kết của các bên:</label><input type="text" name="42_camket">
+      <label>14. Ngày lập hợp đồng (dd/mm/yyyy):</label><input type="text" name="40_ngaylaphopdong">
+      <label>15. Ngày cấp Giấy chứng nhận quyền sử dụng đất (dd/mm/yyyy):</label><input type="text" name="41_ngaycap">
+      <label>16. Tài sản gắn liền với đất:</label><input type="text" name="42_taisan">
       <button type="submit">Gửi</button>
     </div>
   </form>
