--- a/form5.html
+++ b/form5.html
@@ -34,6 +34,8 @@
 
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required>
+    <label for="phone">Số điện thoại:</label>
+    <input type="tel" id="phone" name="phone" required>
 
     <button type="submit">Gửi và chuyển sang phần 2</button>
   </form>
@@ -49,11 +51,13 @@
 
       const name = form.name.value.trim();
       const email = form.email.value.trim();
+      const phone = form.phone.value.trim();
 
       // Gửi dữ liệu về Apps Script (nếu cần)
       const formData = new FormData();
       formData.append('name', name);
       formData.append('email', email);
+      formData.append('phone', phone);
 
       fetch(scriptURL, { method: 'POST', body: formData })
         .then(() => {
