--- a/form3.html
+++ b/form3.html
@@ -106,7 +106,7 @@
     <input type="hidden" id="email" name="email">
 
     <!-- Bộ hồ sơ 4: Cấp bản sao trích lục hộ tịch -->
-    <h3>Bộ hồ sơ 4: Cấp bản sao trích lục hộ tịch</h3>
+    <h3>Bộ hồ sơ 4: Cấp bản sao trích lục hộ tịch. Từ tờ khai yêu cầu cấp bản sao trích lục hộ tịch, hãy kiểm tra các thông tin đã nhập, tick vào ô có giá trị sai và nhập lại giá trị đúng vào bảng sau:</h3>
     <table>
       <tr>
         <th>STT</th>
@@ -209,7 +209,7 @@
     </table>
 
     <!-- Bộ hồ sơ 5: Đăng ký thay đổi nội dung hộ tịch (cải chính hộ tịch) -->
-    <h3>Bộ hồ sơ 5: Đăng ký thay đổi nội dung hộ tịch (cải chính hộ tịch)</h3>
+    <h3>Bộ hồ sơ 5: Đăng ký thay đổi nội dung hộ tịch (cải chính hộ tịch). Từ tờ khai yêu đăng ký thay đổi/cải chính hộ tịch, hãy kiểm tra các thông tin đã nhập, tick vào ô có giá trị sai và nhập lại giá trị đúng vào bảng sau:</h3>
     <table>
       <tr>
         <th>STT</th>
@@ -329,7 +329,7 @@
   </form>
 
   <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbyS0dTOVFqBX6GAKTnEz0RIOOaRP8aw_qMqankC5CoK0TeDJBO1ObpMOHSXkEUICPQ-/exec';
+    const scriptURL = 'https://script.google.com/macros/s/AKfycby8Grk_YtIJIdmHCtbnbZLHIBYTClpVAFrO45GofDqXq3fqhiVZ0hDma0ajjxfcNko/exec';
 
     const form = document.getElementById('checkForm');
     const button = form.querySelector('button');
