--- a/thankyou.html
+++ b/thankyou.html
@@ -72,7 +72,7 @@
   <div class="thank-you-container">
     <h1>Cảm ơn bạn đã hoàn thành bài kiểm thử!</h1>
     <p>Chúng tôi đã nhận được thông tin của bạn. Chúng tôi sẽ xem xét và phản hồi trong thời gian sớm nhất. Chúc bạn một ngày tốt lành!</p>
-    <button onclick="window.location.href='https://sundaybaby339.github.io/form-demo/form1.html/'">Quay lại trang chủ</button>
+    <button onclick="window.location.href='https://sundaybaby339.github.io/form-demo/form1.html'">Quay lại trang chủ</button>
   </div>
 </body>
 </html>
