--- a/form3.html
+++ b/form3.html
@@ -249,14 +249,14 @@
       <tr>
         <td>5</td>
         <td>Họ và tên người được thay đổi</td>
-        <td>Nguyễn Minh Tuấn</td>
+        <td>Nguyễn Minh Tuắn</td>
         <td><input type="checkbox" name="error_18" onchange="toggleInput(this, 'value_18')"></td>
         <td><input type="text" name="value_18" class="value-input" disabled></td>
       </tr>
       <tr>
         <td>6</td>
         <td>Ngày tháng năm sinh người được thay đổi</td>
-        <td>20/07/2020</td>
+        <td>20.07.2020</td>
         <td><input type="checkbox" name="error_19" onchange="toggleInput(this, 'value_19')"></td>
         <td><input type="text" name="value_19" class="value-input" disabled></td>
       </tr>
