--- a/form2.html
+++ b/form2.html
@@ -177,7 +177,7 @@
       }
     }
 
-    let timeLeft = 10 * 60; // Thay đổi thành 10 phút
+    let timeLeft = 10 * 60;
     const timerEl = document.getElementById("timer");
     const startTime = localStorage.getItem('startTimePart2') || Date.now();
     localStorage.setItem('startTimePart2', startTime);
